--- a/favicon/index.html
+++ b/favicon/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Autor" content="Rodriguez Garcia Kaled de Jesus">
+    <meta name="Fecha" content="10/02/2025">
+    <meta name="Descripcion" content="Estructura HTML5; Fav icon">
     <title>Proyecto programación web</title>
     <link rel="icon" type="image/png" href="K-pop logo.png">
     <link rel="stylesheet" href="style.css">
