--- a/ACT-02.html
+++ b/ACT-02.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Autor" content="Rodriguez Garcia Kaled de Jesus">
     <meta name="Fecha" content="11/02/2025">
-    <meta name="Descripcion" content="Estructura HTML5; Hola mundo">
-    <title>Unidad 1 | Actividad 01</title>
+    <meta name="Descripcion" content="Diferentes titulos">
+    <title>Titles</title>
     <link rel="icon" type="image/x.icon" href="fav-icon/upslp.ico">
 </head>
 <body>
