--- a/Proyecto final k-pop/html/contacto.html
+++ b/Proyecto final k-pop/html/contacto.html
@@ -116,7 +116,7 @@
           <strong>Nombre</strong>: Kaled de Jesús Rodríguez García<br>
           <strong>Semestre</strong>: Segundo<br>
           <strong>Carrera</strong>: Tecnologías de la Información<br>
-          <strong>Temas</strong>: Tema No. 1, Tema No. 2, Tema No. 3, ...
+          <strong>Temas</strong>: Inicio, Grupos, Albums, Fandom
         </p>
       </div>
       <div class="col-lg-4">
@@ -127,7 +127,7 @@
           <strong>Nombre</strong>: Luis Fernando Baranda Saucedo<br>
           <strong>Semestre</strong>: Segundo<br>
           <strong>Carrera</strong>: Tecnologías de la Información<br>
-          <strong>Temas</strong>: Tema No. 1, Tema No. 2, Tema No. 3, ...
+          <strong>Temas</strong>: Conciertos, Merchandising, Contacto, Referencias
         </p>
       </div>
       <div class="col-lg-2"></div>
