--- a/Proyecto final k-pop/html/index.html
+++ b/Proyecto final k-pop/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto programación web</title>
     <link rel="icon" type="image/png" href="../recursos/K-pop logo.png">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/index_style.css">
     <script src="../js/js"></script> 
 </head>
 <body>  
@@ -26,7 +26,7 @@
             <li><a href='referencias.html'>Referencias</a></li>
         </ul>
     </nav>
-    <div class="banner"></div>
+    <div class="banner">
     <section id="inicio">
         <h2>Inicio</h2>
         <p>¡Bienvenidos a nuestra página, aquí encontraras información sobre el k-pop grupos albums fandoms, conciertos y merchandising🌟
@@ -70,5 +70,6 @@
                 El K-pop ha logrado trascender fronteras y ser un fenómeno global gracias a su capacidad para adaptarse, innovar y conectar con personas de todas partes del mundo. Si bien cada empresa tiene su propio estilo y enfoque, lo que une a todos los grupos es la pasión, el talento y el compromiso con sus fans.
                 </p>
     </section>
+</div>
 </body>
 </html>
