--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <h1>𓆩♡𓆪 Portafolio 𓆩♡𓆪</h1>
     <h2>0186234 Rodriguez Garcia Kaled de Jesus</h2>
     <h5>Liga de acceso:<a href="https://envyk11.github.io/" target="_blank">https://envyk11.github.io/</a><br></h5>
-    <h5>Paguina k-pop<a href="https://envyk11.github.io/Proyecto final k-pop/html/index.html" target="_blank">Link</a><br></h5>
     <ul><li><h4>Unidad No.1</h4>
         <h5>1.Actividad No.1 (Hola mundo)<a href="ACT-01.html" target="_blank">Link</a><br></h5>
         <h5>2.Actividad No.2 (Titulos)<a href="ACT-02.html" target="_blank">Link</a><br></h5>
@@ -31,6 +30,6 @@
     </ul>
     <ul><li><h4>Unidad No.2</h4></li></ul>
     <ul><li><h4>Unidad No.3</h4></li></ul>
-    <ul><li><h5>Proyecyo final: k-pop<a href="https://envyk11.github.io/Proyecto final k-pop/html/index.html" target="_blank"></a><br></h5></li></ul>
+    <ul><li><h5>Proyecyo final: k-pop<a href="https://envyk11.github.io/Proyecto final k-pop/html/index.html" target="_blank">Link</a><br></h5></li></ul>
   </body>
 </html>
