--- a/Proyecto final k-pop/html/contacto.html
+++ b/Proyecto final k-pop/html/contacto.html
@@ -117,7 +117,7 @@
           <strong>Nombre</strong>: Kaled de Jesús Rodríguez García<br>
           <strong>Semestre</strong>: Segundo<br>
           <strong>Carrera</strong>: Tecnologías de la Información<br>
-          <strong>Temas</strong>: Tema No. 1, Tema No. 2, Tema No. 3, ...
+          <strong>Temas</strong>: Inicio, Grupos, Albums, Fandom
         </p>
       </div>
       
@@ -129,7 +129,7 @@
           <strong>Nombre</strong>: Luis Fernando Baranda Saucedo<br>
           <strong>Semestre</strong>: Segundo<br>
           <strong>Carrera</strong>: Tecnologías de la Información<br>
-          <strong>Temas</strong>: Tema No. 1, Tema No. 2, Tema No. 3, ...
+          <strong>Temas</strong>: Conciertos, Merchandising, Contacto, Referencias
         </p>
       </div>
       
