--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h5>2.Actividad No.2 (Alert, Confirm & Prompt)<a href="Parcial 3/P3ACT-02.html" target="_blank">Link</a><br></h5>
         <h5>3.Actividad No.3 (Calculadora)<a href="Parcial 3/P3ACT-03.html" target="_blank">Link</a><br></h5>
         <h5>4.Actividad No.3-1 (Tablas)<a href="Parcial 3/P3ACT-03-1.html" target="_blank">Link</a><br></h5>
-        <h5>5.Actividad No.4 (Tablas)<a href="Parcial 3/P3ACT-04-1.html" target="_blank">Link</a><br></h5>
+        <h5>5.Actividad No.4 (Tablas)<a href="Parcial 3/P3ACT-04.html" target="_blank">Link</a><br></h5>
     </li>
 </ul>
     <ul><li><h5>Proyecyo final: k-pop<a href="https://envyk11.github.io/Proyecto final k-pop/html/index.html" target="_blank">Link</a><br></h5></li></ul>
