--- a/Proyecto final k-pop/html/merchandising.html
+++ b/Proyecto final k-pop/html/merchandising.html
@@ -173,14 +173,14 @@
     <p>
         Un ejemplo del aprovechamiento de la imagen son los <em>lightsticks</em>, unos palos de luz o “bong” en coreano (<em>Ticketmaster</em>, 2020), con diseños únicos de cada grupo y que se utilizan normalmente en conciertos. BIGBANG fue el primer grupo en crear un <em>lightstick</em> oficial, el cual tiene forma de corona que emite una luz dorada, uno de sus tres colores oficiales.
     </p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/BIGBANG_Lightstick.jpg/800px-BIGBANG_Lightstick.jpg" alt="Lightstick de BIGBANG" class="merch-image" />
+    <img src="bigbanglightstick.jpg" alt="Lightstick de BIGBANG" class="merch-image" />
     <p>
         El impacto del <em>lightstick</em> fue tan grande que desde entonces ha sido un elemento con el que cuenta la mayoría de los grupos. Es aquí donde podemos ver que el <em>merchandising</em> sirve incluso hasta para mejorar la experiencia de un evento.
     </p>
     <p>
         Otro ejemplo de cómo los artículos con la imagen de los artistas son comercializados y utilizados para su promoción son los álbumes, los cuales normalmente incluyen el o los CD’s, un póster coleccionable, un libro de fotos (<em>photobook</em>), un libro de letras de las canciones (<em>lyric book</em>) y, por supuesto, una o varias <em>photocards</em> sorpresa.
     </p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/K-Pop_Album.jpg/800px-K-Pop_Album.jpg" alt="Álbum de K-Pop" class="merch-image" />
+    <img src="kpopalbum.jpg" alt="Álbums de K-Pop" class="merch-image" />
     <p>
         Es decir, unas tarjetas que contienen una fotografía por las cuales, me atrevo a decir, nos emocionamos mucho, pues siempre es excitante saber qué miembro de la banda nos tocó y mucho mejor si es de nuestros/nuestras <em>bias</em>, término que se utiliza para designar a nuestro integrante favorito.
     </p>
@@ -227,7 +227,7 @@
         <p>
             Finalmente, la integración de merchandising, conciertos en vivo, fan meetings y experiencias digitales (como reality shows y plataformas virtuales) construyen un ecosistema que mantiene a los fans comprometidos y leales, generando una rentabilidad sostenida para las agencias y un impacto cultural extendido.
         </p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/70/BTS_Louis_Vuitton_Collection.jpg" alt="BTS en campaña Louis Vuitton" class="merch-image" />
+        <img src="btslouisvuitton.jpg" alt="BTS en campaña Louis Vuitton" class="merch-image" />
         <p>
             En conclusión, el marketing del K-Pop es una combinación de creatividad, tecnología, y gestión de comunidad, que redefine cómo la industria musical se conecta con su público a nivel global.
         </p>
