--- a/Proyecto final k-pop/html/merchandising.html
+++ b/Proyecto final k-pop/html/merchandising.html
@@ -214,7 +214,7 @@
         <p>
             Uno de los pilares del marketing en el K-Pop es el uso intensivo y eficaz de las redes sociales y plataformas digitales como YouTube, TikTok, Instagram, y Twitter. Estas plataformas permiten a los grupos mantener una comunicación constante y cercana con su audiencia, compartiendo desde contenido casual hasta videos musicales y promociones oficiales.
         </p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/0/02/Social_Media_icons.png" alt="Iconos de redes sociales" class="merch-image" />
+        <img src="kpopredsociales.jpg" alt="K-Pop en redes sociales" class="merch-image" />
         <p>
             Además, las campañas virales y los desafíos de baile (dance challenges) en redes sociales son estrategias recurrentes para aumentar la visibilidad de los lanzamientos musicales y fortalecer la comunidad global de fans. Ejemplos como el fenómeno “Gangnam Style” de Psy o más recientes como "Dynamite" de BTS, ilustran cómo el contenido puede volverse viral y alcanzar audiencias masivas.
         </p>
