--- a/Proyecto final k-pop/html/merchandising.html
+++ b/Proyecto final k-pop/html/merchandising.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Merchandising y marketing de K-Pop">
     <meta name="author" content="Tu Nombre">
     <title>Merchandising y Marketing de K-Pop</title>
-    <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/K-pop_logo.svg/1200px-K-pop_logo.svg.png">
+    <link rel="icon" type="image/x-icon" href="../recursos/K-pop logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <style>
         body {
