--- a/Proyecto final k-pop/html/merchandising.html
+++ b/Proyecto final k-pop/html/merchandising.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Merchandising y marketing de K-Pop">
-    <meta name="author" content="Tu Nombre">
+    <meta name="description" content="Merchandising y Marketing de K-Pop">
+    <meta name="author" content="Proyecto">
     <title>Merchandising y Marketing de K-Pop</title>
     <link rel="icon" type="image/x-icon" href="../recursos/K-pop logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
