--- a/Proyecto final k-pop/html/conciertos.html
+++ b/Proyecto final k-pop/html/conciertos.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Conciertos de Kpop en México 2025</title>
-  <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/K-pop_logo.svg/1200px-K-pop_logo.svg.png" />
+  <link rel="icon" type="image/x-icon" href="../recursos/K-pop logo.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
   <style>
     body {
@@ -181,7 +181,7 @@
     <p><strong>Fecha:</strong> 22 de enero</p>
     <p><strong>¿Dónde?</strong> Frontón México, CDMX.</p>
     <p>El grupo mixto de Kpop regresa con su gira "Where to Now?", con esa dosis de música coreana que combina también géneros latinos como el reguetón.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/85/KARD_Logo.svg" alt="Grupo KARD logo" class="concert-image" />
+    <img src="../recursos/conciertokard.jpg" alt="KARD" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -191,7 +191,7 @@
     <p><strong>Fecha:</strong> 28 de enero</p>
     <p><strong>¿Dónde?</strong> Pepsi Center WTC, CDMX</p>
     <p>El integrante de SHINee realizará su primer concierto en solitario en nuestro país, con su gira Ephemeral Gaze; aún puedes encontrar boletos en algunas zonas del recinto.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Taemin_at_SMTOWN_concert_in_Japan_2017_1_%28cropped%29.jpg/1200px-Taemin_at_SMTOWN_concert_in_Japan_2017_1_%28cropped%29.jpg" alt="Taemin en concierto" class="concert-image" />
+    <img src="../recursos/conciertotaemin.jpg" alt="Taemin" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -207,7 +207,7 @@
     <p><strong>Fecha:</strong> 2 de febrero</p>
     <p><strong>¿Dónde?</strong> Carpa Velódromo, CDMX</p>
     <p>El integrante del grupo de Kpop Pentagon se presentará en México con su gira "I Think I Think Too Much", mostrando un enfoque más personal y artístico.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/85/Pentagon-week7-logo.svg" alt="Grupo Pentagon logo" class="concert-image" />
+    <img src="../recursos/conciertokino.jpg" alt="Kino" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -217,7 +217,7 @@
     <p><strong>Fecha:</strong> 4 de febrero</p>
     <p><strong>¿Dónde?</strong> Palacio de los Deportes, CDMX</p>
     <p>Uno de los grupos favoritos de la cuarta generación del Kpop regresa a nuestro país con "SYNK: Parallel Line", con su mezcla de música pop y narrativas futuristas. Aún encuentras algunos boletos disponibles.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Aespa_-_New_Logo.png" alt="Aespa logo" class="concert-image" />
+    <img src="../recursos/conciertoaespa.jpg" alt="Aespa" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -227,7 +227,7 @@
     <p><strong>Fecha:</strong> 19 y 20 de febrero</p>
     <p><strong>¿Dónde?</strong> Auditorio BB, CDMX</p>
     <p>Otro grupo solo de chicas también llega en el mes de febrero, con el fan concert titulado “NMIXX CHANGE UP: MIXX LAB”. Son dos fechas disponibles, por lo que aún hay boletos.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Nmixx_logo_2022.svg" alt="NMIXX logo" class="concert-image" />
+    <img src="../recursos/conciertonmixx.jpg" alt="NMIXX" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -243,7 +243,7 @@
     <p><strong>Fecha:</strong> 22 y 23 de marzo</p>
     <p><strong>¿Dónde?</strong> Palacio de los Deportes, CDMX</p>
     <p>J-Hope de <strong>BTS</strong> vendrá a México después de 8 años de ausencia en nuestro país, con su tour “Hope on the Stage”, el cual dará inicio en febrero en Corea del Sur.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/J-Hope_concert_Korea_2018.jpg" alt="J-Hope en concierto" class="concert-image" />
+    <img src="../recursos/conciertojhope.jpg" alt="J-Hope" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -259,7 +259,7 @@
     <p><strong>Fecha:</strong> 4 de abril</p>
     <p><strong>¿Dónde?</strong> Festival Tecate Pa'l Norte, Monterrey </p>
     <p>El grupo será una de las estrellas principales de este festival de música en el Parque Fundidora de Monterrey. Será su única presentación en el país, así que no te los pierdas.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Seventeen_Logo.svg" alt="Seventeen logo" class="concert-image" />
+    <img src="../recursos/conciertoseventeen.jpg" alt="Seventeen" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -269,7 +269,7 @@
     <p><strong>Fecha:</strong> 5 de abril</p>
     <p><strong>¿Dónde?</strong> Festival AXE Ceremonia, CDMX</p>
     <p>La boyband debutará en México durante el festival en el Parque Bicentenario de la Ciudad de México. TXT también es uno de los grupos favoritos en la actualidad y es muy esperado.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/TXT_logo.svg" alt="Logo Tomorrow X Together" class="concert-image" />
+    <img src="../recursos/conciertotxt.jpg" alt="Tomorrow X Together" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -279,7 +279,7 @@
     <p><strong>Fecha:</strong> 5 de abril</p>
     <p><strong>¿Dónde?</strong> Foro Puebla, CDMX</p>
     <p>El integrante de GOT7, Yugyeom, tendrá su primer tour en solitario en Norteamérica y Latinoamérica, visitando nuestro país con su gira 2025.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/86/GOT7_logo.svg" alt="GOT7 Logo" class="concert-image" />
+    <img src="../recursos/conciertoyugyeom.jpg" alt="Yugyeom" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -289,7 +289,7 @@
     <p><strong>Fecha:</strong> 5 de abril</p>
     <p><strong>¿Dónde?</strong> Foro Bailmex de PALCCO, Guadalajara</p>
     <p>El ex integrante de Super Junior vendrá a nuestro país en solitario, después de años de ausencia, al evento "Kangin Fan Meeting: Inside Out Day in Mexico". Se trata de una de las primeras presentaciones para promover el kpop en tierras jaliscienses.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Super_Junior_logo.svg" alt="Super Junior logo" class="concert-image" />
+    <img src="../recursos/conciertokangin.jpg" alt=""Kangin class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -299,7 +299,7 @@
     <p><strong>Fecha:</strong> 12 y 13 de abril</p>
     <p><strong>¿Dónde?</strong> Estadio GNP Seguros, CDMX</p>
     <p>El grupo bajo el sello de la JYP ofrecerá dos conciertos consecutivos en el renovado estadio GNP Seguros. Su gira mundial, dominATE World Tour, ya es sold out en nuestro país.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Stray_Kids_logo.png" alt="Stray Kids logo" class="concert-image" />
+    <img src="../recursos/conciertostraykids.jpg" alt="Stray Kids" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -315,7 +315,7 @@
     <p><strong>Fecha:</strong> 2 de mayo</p>
     <p><strong>¿Dónde?</strong> Teatro Municipal José Calderón, Monterrey</p>
     <p>El grupo de kpop se presentará en Monterrey con motivo de la inauguración del evento K-MTY 2025, aún se esperan detalles de su aparición.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/JUST_B_logo.svg" alt="JUST B logo" class="concert-image" />
+    <img src="../recursos/conciertojustb.jpg" alt="JUST B" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -325,7 +325,7 @@
     <p><strong>Fecha:</strong> 9 de mayo</p>
     <p><strong>¿Dónde?</strong> Estadio GNP Seguros, CDMX</p>
     <p>Este festival icónico de SM Entertainment llegará por primera vez a México en el 2025, celebrando el 30 aniversario de la compañía. Los artistas confirmados hasta el momento son miembros del grupo EXO, NCT y subunidades, Super Junior, aespa y más.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/SM_Entertainment_Logo.svg" alt="SM Entertainment Logo" class="concert-image" />
+    <img src="../recursos/smtownlive.jpg" alt="SM Entertainment" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -341,7 +341,7 @@
     <p><strong>Fecha:</strong> 14 de junio</p>
     <p><strong>¿Dónde?</strong> La Maraka, CDMX</p>
     <p>La banda de kpop se presentará en México como parte de su gira por Latinoamérica, como parte del tour para promocionar su más reciente álbum.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f4/W24_logo.svg" alt="W24 logo" class="concert-image" />
+    <img src="../recursos/conciertow24.jpg" alt="W24" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -351,7 +351,7 @@
     <p><strong>Fecha:</strong> 20 de junio</p>
     <p><strong>¿Dónde?</strong> Pepsi Center WTC, CDMX</p>
     <p>El integrante de EXO regresa a México en una presentación solista, bajo el tour "Reverie World Tour 2025". También visitará Brasil y Chile, después de varios años de ausencia en Latinoamérica.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Baekhyun_Concert_2019.jpg" alt="Baekhyun en concierto" class="concert-image" />
+    <img src="../recursos/conciertobaekhyun.jpg" alt="Baekhyun" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -367,7 +367,7 @@
     <p><strong>Fecha:</strong> 17 de julio</p>
     <p><strong>¿Dónde?</strong> Auditorio BB, CDMX</p>
     <p>El líder del grupo de Kpop GOT7 regresa a México con "TAPE:RE LOAD", una gira que también estará en otros dos países de Latinoamérica.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/Jay_B_logo.svg" alt="Jay B logo" class="concert-image" />
+    <img src="../recursos/conciertojayb.jpg" alt="Jay B" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -377,6 +377,7 @@
     <p><strong>Fecha:</strong> 17 de julio</p>
     <p><strong>Dónde:</strong> Sin confirmar</p>
     <p>Los chicos de NTX llegan con su primera gira por Latinoamérica, titulada "Our Track". Visitarán México, pero también Uruguay, Argentina, Perú, Chile y Colombia.</p>
+    <img src="../recursos/conciertontx.jpg" alt="NTX" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -392,7 +393,7 @@
     <p><strong>Fecha:</strong> 8 de agosto</p>
     <p><strong>¿Dónde?</strong> Pabellón Oeste, CDMX</p>
     <p>Por primera vez en Latinoamérica y con el tour "Fallin for you", el cantante coreano y ex miembro de Treasure estará en tierras mexicanas en el mes de agosto.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/Bang_Yedam_Logo.svg" alt="Bang Yedam logo" class="concert-image" />
+    <img src="../recursos/conciertobangyedam.jpg" alt="Bang Yedam" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -402,7 +403,7 @@
     <p><strong>Fecha:</strong> 12 de agosto</p>
     <p><strong>¿Dónde?</strong> Pepsi Center, CDMX</p>
     <p>La banda de pop rock e indie presenta su gira "Once Upon A WRLD" en el mes de agosto, marcando su regreso después de un par de años de ausencia en escenarios mexicanos.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/The_Rose_logo.svg" alt="The Rose logo" class="concert-image" />
+    <img src="../recursos/conciertotherose.jpg" alt="The Rose" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -412,7 +413,7 @@
     <p><strong>Fecha:</strong> 23 de agosto</p>
     <p><strong>¿Dónde?</strong> Estadio GNP Seguros, CDMX</p>
     <p>El grupo de kpop con 8 integrantes se presentará por primera vez en el GNP de la CDMX, con su gira "In Your Fantasy". La fecha en México será la que cierre su paso por Norteamérica.</p>
-    <img src="https://www.excelsior.com.mx/media/inside-the-note/pictures/2025/04/01/ateez-cdmx-2025.jpg" alt="ATEEZ concierto México 2025" class="concert-image" />
+    <img src="../recursos/conciertoateez.jpg" alt="ATEEZ" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
@@ -426,7 +427,7 @@
     <p><strong>Fecha:</strong> 9 de enero</p>
     <p><strong>¿Dónde?</strong> Sin confirmar</p>
     <p>El icónico grupo de la segunda generación se presentará en nuestro país a inicios del mes de enero del 2026, siendo quizá el primer concierto del género en México.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/8f/N.Flying_Logo.svg" alt="N.FLYING logo" class="concert-image" />
+    <img src="../recursos/conciertonflying.jpg" alt="N.FLYING" class="concert-image" />
   </section>
 &nbsp;
 &nbsp;
