--- a/Programacion Web 2/Zapateria_Bicentenario/Todo_acerca_del_zapato.html
+++ b/Programacion Web 2/Zapateria_Bicentenario/Todo_acerca_del_zapato.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Todo acerca del zapato | Zapatería Bicentenario</title>
+  <title>Zapateria bicentenario</title>
+        <link rel="icon" type="image/x-icon" href="assets/zapateria bicentenario.png" />
   <!-- Bootstrap CSS -->
 <link href="css/styles.css" rel="stylesheet"/>
 </head>
@@ -560,4 +561,5 @@ Puesto que el cerquillo, tal como indica su nombre, circunda la plantilla, queda
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 ```
