--- a/Programacion Web 2/Zapateria_Bicentenario/Nosotros.html
+++ b/Programacion Web 2/Zapateria_Bicentenario/Nosotros.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Todo acerca del zapato | Zapatería Bicentenario</title>
+  <title>Zapateria bicentenario</title>
+        <link rel="icon" type="image/x-icon" href="assets/zapateria bicentenario.png" />
   <!-- Bootstrap CSS -->
   <link href="css/styles.css" rel="stylesheet" />
 </head>
@@ -70,3 +71,4 @@
   </footer>
 </body>
 </html>
+
