--- a/Programacion Web 2/Zapateria_Bicentenario/Distribuidores.html
+++ b/Programacion Web 2/Zapateria_Bicentenario/Distribuidores.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Distribuidores</title>
+   <title>Zapateria bicentenario</title>
+        <link rel="icon" type="image/x-icon" href="assets/zapateria bicentenario.png" />
     <!-- Bootstrap CSS -->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
@@ -34,4 +35,5 @@
     <!-- Bootstrap JS (opcional si usas el menú responsive) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
