--- a/Programacion Web 2/Zapateria_Bicentenario/Catalogo.html
+++ b/Programacion Web 2/Zapateria_Bicentenario/Catalogo.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo</title>
+    <title>Zapateria bicentenario</title>
+        <link rel="icon" type="image/x-icon" href="assets/zapateria bicentenario.png" />
     <!-- Bootstrap CSS -->
     <link href="css/styles.css" rel="stylesheet" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
@@ -251,3 +252,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
+
